Change publishDir to docs for GitHub Pages

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'http://localhost:1313/'
 languageCode = 'ja'
 title = 'Hongo Tech Articles'
 theme = 'blowfish'
+publishDir = "docs"
 
 [outputs]
   home = ["HTML", "JSON", "RSS"]
