Fix baseURL for GitHub Pages

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://localhost:1313/'
+baseURL = 'https://shinji-hongo.github.io/hongo-tech-articles/'
 languageCode = 'ja'
 title = 'Hongo Tech Articles'
 theme = 'blowfish'
