Fix baseURL for GitHub Pages production

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 theme = "blowfish"
-baseURL = "http://localhost:1313/"
+baseURL = "https://shinji-hongo.github.io/hongo-tech-articles/"
 languageCode = "ja"
 defaultContentLanguage = "ja"
 title = "Hongo Tech Articles"
