コードブロックの視認性を改善（カスタムCSS追加）

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,6 +8,7 @@
 colorScheme = "blowfish"
 defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
+customCSS = ["css/custom.css"]  # ← ここに追加
 
 enableA11y = false
 enableSearch = true
