--- a/.github/workflows/scheduled_deploy.yml
+++ b/.github/workflows/scheduled_deploy.yml
@@ -1,11 +1,11 @@
 name: Scheduled Deploy to Cloudflare Pages
 
 on:
-push:
+  push:
     branches:
-      - master  # main ではなく master に変更
+      - master
   schedule:
-  # 毎日 日本時間の午前9時（UTC 0:00）
+    # 毎日 日本時間の午前9時（UTC 0:00）に実行
     - cron: '0 0 * * *'
   workflow_dispatch:
 
@@ -14,5 +14,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Cloudflare Pages Build
-        run: curl -X POST "${{ secrets.CF_PAGES_DEPLOY_HOOK }}"
-        
+        run: |
+          curl -X POST "${{ secrets.CF_PAGES_DEPLOY_HOOK }}"
